# PyGlobe

./: .gitignore  .readthedocs.yaml  ECEF_Globe.py  LICENSE  README.md  TODO.md  coord_utils.py  dynamic.py  mkdocs.yml  obj_loader.py  obj_loader2.py  pyglobe.yml  pyproject.toml  static.py  tile_fetcher.py  tile_utils.py  wireframe.py
assets/bk/: satellite.mtl
docs/: api-reference.md  coords.md  index.md  plots.py
example/: example.py
example/assets/satellite/: satellite.mtl
pyglobe/: coord_utils.py  globe.py  scene.py  tile_fetcher.py  tile_manager.py  tile_utils.py
test_object_loading/sample_object_project/: main.py  obj_loader.py
test_object_loading/sample_object_project/assets/earth/: earth.mtl
test_object_loading/sample_object_project/assets/satellite/: satellite.mtl
test_object_loading/satellite/: sat_loader.py  satellite.mtl
test_object_loading/triangle/: triangle_loader.py
